--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "niem-tool-template-vue",
+  "name": "niem-assistant",
   "version": "1.0.0",
-  "private": true,
   "description": "",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -19,14 +18,18 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
-    "vuex": "^3.1.1"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
     "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-plugin-pwa": "^4.1.2",
+    "@vue/cli-plugin-router": "^4.1.2",
     "@vue/cli-plugin-unit-jest": "^4.1.2",
+    "@vue/cli-plugin-vuex": "^4.1.2",
     "@vue/cli-service": "^4.1.2",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
