--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "eslint.enable": true
+  "eslint.enable": true,
+  "cSpell.words": [
+    "autofocus",
+    "keydown",
+    "keyup",
+    "onclick",
+    "onkeyup",
+    "topright"
+  ]
 }
