--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-good-table": "^2.19.1",
     "vue-router": "^3.1.6",
     "vue-worker": "^1.2.1",
