--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-good-table": "^2.19.1",
     "vue-router": "^3.1.6",
     "vue-worker": "^1.2.1",
+    "vuewordcloud": "^18.7.12",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
