Updated app name, removed unsupported features from home page, and added support for pm2 process daemon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,15 @@
   "eslint.enable": true,
   "cSpell.words": [
     "autofocus",
+    "cadetblue",
+    "comlink",
+    "devtool",
     "keydown",
     "keyup",
+    "monit",
     "onclick",
     "onkeyup",
-    "topright"
+    "topright",
+    "vuewordcloud"
   ]
 }
