--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "niem-assistant",
+  "name": "niem-toolbox",
   "version": "1.0.0",
-  "description": "",
+  "description": "Capabilities to support NIEM modeling and development work.",
   "scripts": {
     "assets": "vue-asset-generate -a src/assets/images/logo.2.png -o public/img/icons",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "pm2": "pm2 start ecosystem.config.yaml",
+    "pm2:list": "pm2 list",
+    "pm2:monit": "pm2 monit",
+    "pm2:restart": "pm2 restart niem-toolbox",
+    "pm2:stop": "pm2 stop niem-toolbox",
+    "pm2:delete": "pm2 delete niem-toolbox",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "deploy": "npm run build && npm run dist:commit && npm run dist:push",
@@ -20,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "niem-model": "github:cdmgtri/niem-model#dev",
+    "pm2": "^4.4.0",
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
