--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.6",
+    "comlink-loader": "^2.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
