Refactored, improved search functionality, and added namespace dependent object lists

--- a/ecosystem.config.yaml
+++ b/ecosystem.config.yaml
@@ -2,3 +2,4 @@ apps:
   - script: ./node_modules/@vue/cli-service/bin/vue-cli-service.js
     name: niem-toolbox
     args: serve
+    exp_backoff_restart_delay: 200
