--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "niem-model": "github:cdmgtri/niem-model#dev",
@@ -31,29 +31,29 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
-    "vue-router": "^3.1.6",
+    "vue-router": "^3.4.3",
     "vue-worker": "^1.2.1",
     "vuewordcloud": "^18.7.12",
-    "vuex": "^3.1.3"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-plugin-eslint": "^4.3.0",
-    "@vue/cli-plugin-pwa": "^4.3.0",
-    "@vue/cli-plugin-router": "^4.3.0",
-    "@vue/cli-plugin-unit-jest": "^4.3.0",
-    "@vue/cli-plugin-vuex": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "@vue/test-utils": "^1.0.0-beta.32",
+    "@vue/cli-plugin-babel": "^4.5.3",
+    "@vue/cli-plugin-eslint": "^4.5.3",
+    "@vue/cli-plugin-pwa": "^4.5.3",
+    "@vue/cli-plugin-router": "^4.5.3",
+    "@vue/cli-plugin-unit-jest": "^4.5.3",
+    "@vue/cli-plugin-vuex": "^4.5.3",
+    "@vue/cli-service": "^4.5.3",
+    "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.2.6",
+    "babel-jest": "^26.3.0",
     "comlink-loader": "^2.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.6.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
-    "sass-loader": "^8.0.2",
-    "vue-pwa-asset-generator": "^0.3.0",
+    "sass-loader": "^9.0.3",
+    "vue-pwa-asset-generator": "^1.3.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
