--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "niem-model": "github:cdmgtri/niem-model#dev",
-    "pm2": "^4.4.0",
+    "niem-model-qa": "github:cdmgtri/niem-model-qa#dev",
+    "nodehun": "^3.0.2",
+    "pm2": "^4.4.1",
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
@@ -44,13 +46,14 @@
     "@vue/cli-plugin-unit-jest": "^4.5.3",
     "@vue/cli-plugin-vuex": "^4.5.3",
     "@vue/cli-service": "^4.5.3",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.0.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "comlink-loader": "^2.0.0",
-    "eslint": "^7.6.0",
+    "eslint": "^7.7.0",
     "eslint-plugin-vue": "^6.2.2",
+    "node-addon-loader": "0.0.6",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
     "vue-pwa-asset-generator": "^1.3.0",
